--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Fantastic</title>
         <link rel="stylesheet" href="style.css">
-    <head>
+    </head>
     <body>
         <header>
             <img id ="logo" src="/uploads/2020/12/logo_0_1607675596.svg" height="40px"/>
